--- a/src/view-ui/src/index.css
+++ b/src/view-ui/src/index.css
@@ -11,3 +11,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul,li{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.mj_btn {
+  border: 1px solid transparent;
+  user-select: none;
+  cursor: pointer;
+  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  touch-action: manipulation;
+  padding: 4px 15px;
+  border-radius: 2px;
+  height: 32px;
+  line-height: 1.5715;
+  position: relative;
+  display: inline-block;
+  font-weight: 400;
+  white-space: nowrap;
+  text-align: center;
+  font-size: 14px;
+  box-shadow: 0 2px #00000004;
+}
+.mj_btn, .mj_btn:active, .mj_btn:focus {
+  outline: 0;
+}
+.mj_btn:hover, .mj_btn:focus {
+  color: #40a9ff;
+  border-color: #40a9ff;
+  background: #fff;
+}
