自定义示例补充

--- a/src/view-ui/src/demo/Code/Code.scss
+++ b/src/view-ui/src/demo/Code/Code.scss
@@ -12,6 +12,9 @@
     &.tab-4 {
       text-indent: 4em;
     }
+    &.tab-6 {
+      text-indent: 6em;
+    }
     &.notes,
     .notes {
       color: green;
